[package]
edition      = "2024"
name         = "epd47-test"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "epd47-test"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

ratatui = { version = "0.30.0", default-features = false }
ratatui-core = "0.1.0"
mousefood = { git = "https://github.com/pyaillet/mousefood", branch = "feat/add_lilygo_epd47", default-features = false, features = ["fonts", "lilygo-epd47"] }
lilygo-epd47 = { git = "https://github.com/pyaillet/lilygo-epd47-rs", branch = "feat/rotation" }
embedded-graphics = "0.8.2"
tui-big-text = "0.8.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
